2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::set_title_filename): Concatenate
	with the string literal PACKAGE_NAME at compile time.

2004-06-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_add_file): New method.
	Move the actual file-adding parts from find_check_file() here.
	(FileTree::find_recursively): Move the file testing previously
	done in find_check_file() into this method in order to make the
	recursion more obvious.  Also handle Glib::Dir exceptions right
	here, so that the caller doesn't have to handle them.
	(FileTree::find_files): Remove the try/catch block enclosing the
	call to find_recursively().  We no longer need to do it twice.
	(FileTree::find_check_file): Remove.

2004-06-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::calculate_file_index): Simplify.

2004-06-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::create_with_error_message):
	Minor code rearrangement.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::find_files): Slightly clarify
	the call to Gtk::TreePath's constructor.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): Remove because automake-1.7
	complains about the undefined variable ${ACLOCAL_FLAGS} even
	though it's a shell substitution.

	* configure.ac: Use AC_SUBST() to set up ACLOCAL_AMFLAGS here
	instead, so automake-1.7 won't notice.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::expand_and_select): Replace the
	calls to TreeSelection::select() and TreeView::scroll_to_row()
	by a single TreeView::set_cursor() call.
	(FileTree::find_files): After the tree has been filled in, the
	first call to expand_and_select() doesn't always scroll to the
	selected row (no matter if set_cursor() or scroll_to_row() is
	used there).  Explicitely scroll to the first row after filling